# duckdb-dns

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
benchmark/: BENCHMARK_RESULTS.md  benchmark_dns.sql  benchmark_results.txt
src/: lib.rs  wasm_lib.rs
test-data/: top_1000.csv
test/sql/: cache_performance.test  cache_size.test  dns.test  performance.test
