[package]
name = "dns"
version = "0.3.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.4.3", features = ["vtab-loadable", "vscalar"] }
duckdb-loadable-macros = "0.1.13"
libduckdb-sys = { version = "1.4.3", features = ["loadable-extension"] }
tokio = { version = "1.47", features = ["rt", "net", "macros", "rt-multi-thread", "sync"] }
hickory-resolver = "0.25"
hickory-proto = "0.25"
futures = "0.3"
once_cell = "1.21"
arc-swap = "1.7"
