[package]
name = "dns"
version = "0.3.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.4.4", features = ["vtab-loadable", "vscalar"] }
libduckdb-sys = { version = "1.4.4", features = ["loadable-extension"] }
tokio = { version = "1.49", features = ["rt", "net", "macros", "rt-multi-thread", "sync"] }
hickory-resolver = "0.25.2"
hickory-proto = "0.25.2"
futures = "0.3.31"
once_cell = "1.21.3"
arc-swap = "1.8"
